--- a/resume/resume-user/src/main/resources/application.yml
+++ b/resume/resume-user/src/main/resources/application.yml
@@ -19,8 +19,12 @@ spring:
       pool:
         max-active: 8
         max-wait: 500
-
-
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+    virtual-host: /test
 eureka:
   client:
     register-with-eureka: true
